# know-when-you-dont

./: .gitignore  README.md  pyproject.toml
datasets/boundaries_clarification/: items.jsonl
datasets/boundaries_clarification_elicited/: items.jsonl
docs/: submission_notes.md
notebooks/: kwyd_boundaries_clarification.ipynb  kwyd_boundaries_clarification_elicited.ipynb  kwyd_prospective_monitoring.ipynb  kwyd_retrospective_monitoring.ipynb  kwyd_self_correction.ipynb
references/: README.md
scripts/: README.md  preview_family.py  render_family.py  validate_family.py
src/know_when_you_dont/: __init__.py  family_loader.py  preview.py  render.py  schemas.py  scoring.py  validate.py
src/know_when_you_dont/task_code/: __init__.py  boundaries_clarification.py
task_families/boundaries_clarification/: README.md  family.yaml  items.yaml  items_eval.yaml  prompt_bank.yaml
task_families/boundaries_clarification_elicited/: family.yaml
task_families/prospective_monitoring/: family.yaml
task_families/retrospective_monitoring/: family.yaml
task_families/self_correction/: family.yaml
